--- a/src/app/components/shared/sidebar/sidebar.component.scss
+++ b/src/app/components/shared/sidebar/sidebar.component.scss
@@ -10,9 +10,30 @@
 .collapsed {
   width: 80px;
 }
-
+.sidebar.collapsed .sidebar__item > :not(.sidebar__icon) {
+  display: none;
+}
 .toggle-button {
   position: absolute;
   top: 10px;
   left: 10px;
+}
+.sidebar__navigation {
+  width: 100%;
+}
+.sidebar__item {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  border-radius: 16px;
+  &:hover {
+    cursor: pointer;
+    background-color: rgb(82, 82, 82);
+  }
+}
+.sidebar__link {
+  color: white;
+  width: 100%;
+  display: inline-block;
 }
