--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,13 @@
 <div class="admin__container">
   <app-sidebar
-    [toggleSidebar]="toggleSidebar"
     [isCollapsed]="isCollapsed"
+    (event)="toggleSidebar($event)"
   ></app-sidebar>
   <div class="content">
-    <app-header></app-header>
+    <app-header
+      [isCollapsed]="isCollapsed"
+      (event)="toggleSidebar($event)"
+    ></app-header>
     <router-outlet></router-outlet>
   </div>
 </div>
