--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,12 +3,44 @@
 /* Importing Bootstrap SCSS file. */
 @import "bootstrap/scss/bootstrap.scss";
 @import "./assets/iconfont.scss";
+@import "./assets/fonts.scss";
 
+// Normalize
+* {
+  font-family: "Nunito Sans", sans-serif;
+  transition: all 0.2s ease-in;
+}
+
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.list {
+  margin: 0;
+  list-style: none;
+}
+
+.img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.link {
+  text-decoration: none;
+}
+
+// Custom
 .logo {
   cursor: pointer;
 }
 
-.app-icon{
+.app-icon {
   width: 40px;
   height: 40px;
+}
+.iconx2 {
+  font-size: 26px;
 }
