feat:  first draft login, not-found and first document view

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,46 @@
-<app-header></app-header>
-Login
-<a routerLink="/home">Home</a>
+<body class="bg-danger">
+  <section>
+    <div class="container mt-5 pt-5 ">
+      <div class="row">
+        <div class="col-12 col-sm-8 col-md-6 m-auto">
+          <div class="card text-center">
+            <div class="">
+              <img
+                src="assets/img/svg/logo.svg"
+                alt="Logo Atlantida"
+                class="logo mt-4"
+                width="50px"
+                height="50px"
+              />
+            </div>
+
+            <div class="card-body">
+              <form action="">
+
+                <input
+                  class="form-control my-3 py-2"
+                  type="text"
+                  placeholder="Usuario"
+                />
+
+                <input
+                  class="form-control my-3 py-2"
+                  type="password"
+                  placeholder="Contraseña"
+                />
+
+                <button class="btn btn-danger btn-lg mt-2">Ingresar</button>
+              </form>
+            </div>
+            <div class="card -footer text-muted">
+              <a routerLink="/home">Home</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
+
+
+
