--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,18 @@
-<p>not-found works!</p>
+
+
+
+    <body>
+        <div class="d-flex align-items-center justify-content-center vh-100">
+            <div class="row">
+
+                <div class="text-center">
+                    <p class="fs-3"> <span class="text-danger"> 404 Oops!</span></p>
+                    <p class="lead">
+                        The page you're looking for doesn't exist.
+                    </p>
+
+                </div>
+
+            </div>
+        </div>
+    </body>
